--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/style.css" rel="stylesheet" />
-    <title>Vite App</title>
+    <title>Qui est là ? - Gestion des visiteurs</title>
+    <meta
+      name="description"
+      content="Système de gestion des visiteurs pour l'accueil"
+    />
   </head>
-  <body>
+  <body class="bg-gray-100">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
