add QR Code scripts to index.html for visitor management functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
   <body class="bg-gray-100">
     <div id="app"></div>
+    <!-- Scripts QR Code -->
+    <script src="/qrcode.min.js"></script>
+    <script src="/html5-qrcode.min.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
